--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 			</div>
 
 			<div class="flex gap-2">
-				<button id="addEntityBtn" class="btn bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-lg flex items-center gap-2"><i class="fas fa-table"></i> Nueva Entidad</button>
-				<button id="addRelationshipBtn" class="btn bg-pink-500 hover:bg-pink-600 text-white px-4 py-2 rounded-lg flex items-center gap-2"><i class="fas fa-link"></i> Nueva Relación</button>
+				<button id="addEntityBtn" class="btn bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-lg flex items-center gap-2"><i class="fas fa-table"></i> Entidad</button>
+				<button id="addRelationshipBtn" class="btn bg-pink-500 hover:bg-pink-600 text-white px-4 py-2 rounded-lg flex items-center gap-2"><i class="fas fa-link"></i> Relación</button>
 				<button id="resetViewBtn" class="btn bg-indigo-500 hover:bg-indigo-600 text-white px-4 py-2 rounded-lg flex items-center gap-2"><i class="fas fa-crosshairs"></i> Centrar Vista</button>
-				<button id="errorsBtn" class="btn bg-yellow-500 hover:bg-yellow-600 text-white px-4 py-2 rounded-lg flex items-center gap-2"><i class="fas fa-exclamation-triangle"></i> Errores</button>
+				<button id="errorsBtn" class="btn bg-yellow-600 hover:bg-yellow-700 text-white px-4 py-2 rounded-lg flex items-center gap-2"><i class="fas fa-exclamation-triangle"></i></button>
 				<button id="exportSQLBtn" class="btn bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-lg flex items-center gap-2"><i class="fas fa-database"></i> Exportar SQL</button>
 			</div>
 		</div>
